# libfreenect2-metal

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: ci.yml  docs.yml
cmake_modules/: FindGLFW3.cmake  GenerateResources.cmake
depends/: INSTALL-windows.txt
doc/: CMakeLists.txt  Doxyextra.css  Doxyfile.in  configuration.md  depth_accuracy.md  faq.md  guides.dox  inject_awesome.cmake  mainpage.dox  metal3.md  python.md  recording_replay.md  registration.md  self_hosted_runner.md  webcam.md
examples/: CMakeLists.txt  Protonect.cpp  viewer.cpp
include/internal/libfreenect2/: async_packet_processor.h  depth_packet_processor.h  depth_packet_stream_parser.h
include/internal/libfreenect2/usb/: transfer_pool.h
include/libfreenect2/: config.h.in  libfreenect2.hpp  packet_pipeline.h
src/: cpu_depth_packet_processor.cpp  depth_packet_stream_parser.cpp  libfreenect2.cpp  metal_depth_packet_processor.metal  metal_depth_packet_processor.mm  opengl_depth_packet_processor.cpp  packet_pipeline.cpp  rgb_packet_stream_parser.cpp  transfer_pool.cpp  turbo_jpeg_rgb_packet_processor.cpp
src/openni2/: DeviceDriver.cpp
tests/: CMakeLists.txt  test_cpu_depth_processor.cpp  test_depth_stream_parser.cpp  test_metal_cpu_parity.cpp  test_registration.cpp  test_rgb_stream_parser.cpp
tests/support/: synthetic.cpp  synthetic.h
tools/: generate_resources.cpp
tools/streamer_recorder/: CMakeLists.txt
